seccion-21/173-ingress-rules-second-app/k8s/app-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v1-deploy
  labels:
    app: app-v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-v1
  template:
    metadata:
      labels:
        app: app-v1
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          command: ['sh', '-c', 'echo "<h1>APP V1</h1><p>VERSION 1.0 desde $HOSTNAME</p>" > /usr/share/nginx/html/index.html && nginx -g "daemon off;"']
---
apiVersion: v1
kind: Service
metadata:
  name: app-v1-svc
  labels:
    app: app-v1
spec:
  type: NodePort
  selector:
    app: app-v1
  ports:
    - name: http
      port: 8080
      targetPort: 80
      protocol: TCP
