seccion-21/173-ingress-rules-second-app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
#  ingressClassName: ingress-nginx-controller
  rules:
    # APP V1
    - host: app.v1.org
      http:
        paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: app-v1-svc
                  port:
                    number: 8080
    - http:
        paths:
          - path: /app/v1
            pathType: Prefix
            backend:
              service:
                name: app-v1-svc
                port:
                  number: 8080
    # APP V2
    - host: app.v2.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-v2-svc
                port:
                  number: 9090
    - http:
        paths:
          - path: /app/v2
            pathType: Prefix
            backend:
              service:
                name: app-v2-svc
                port:
                  number: 9090
